network-policy/nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels:
    app: my-pod
spec:
  containers:
     - image: nginx:1.16
       name: my-nginx
