network-policy/access-only-for-restricted-pods.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: policy-demo
spec:
  podSelector:
    matchLabels:
       app: nginx
  ingress:
    - from:
      - podSelector:
          matchLabels:
            run: busybox
